--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,7 +3,7 @@ server {
     server_name 3.122.42.49;
 
     location / {
-        proxy_pass http://nuxt_app:3010/test;
+        proxy_pass http://nuxt_app:3010;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
